--add new parm in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,1 @@
-
-# Mouse settings
-set-option -g -q mouse on
-bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
-bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
-
-# Binds
-set-option -g prefix C-q
+/home/notidman/.tmux.conf
