--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,51 @@
-/home/notidman/.tmux.conf
+#=======BIND=======#
+# unbind default prefix and set it to ctrl-a
+unbind C-b
+set -g prefix M-q
+bind M-q send-prefix
+
+# reload config file
+bind M-r source-file ~/.tmux.conf \; display ".tmux.conf reloaded!"
+
+# pane movement shortcuts (same as vim)
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+###################
+
+#=======MOUSE=======#
+
+set-option -g -q mouse on
+bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+
+###################
+
+# make delay shorter
+set -sg escape-time 0
+
+#=======COLORSCHEME=======#
+# Basic color support setting
+set-option -g default-terminal "screen-256color"
+# Default bar color
+set-option -g status-style bg='#1b1c36',fg='#ecf0c1'
+
+# Active Pane
+set -g pane-active-border-style "fg=#5ccc96"
+
+# Inactive Pane
+set -g pane-border-style "fg=#686f9a"
+
+# Active window
+set-option -g window-status-current-style bg='#686f9a',fg='#ffffff'
+
+# Message
+set-option -g message-style bg='#686f9a',fg='#ecf0c1'
+set-option -g message-command-style bg='#686f9a',fg='#ecf0c1'
+
+# When Commands are run
+set -g message-style "fg=#0f111b,bg=#686f9a"
+###################
+
