--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 #=======BIND=======#
 # unbind default prefix and set it to ctrl-a
 unbind C-b
-set -g prefix M-q
+set -g prefix M-a
 bind M-q send-prefix
 
 # reload config file
@@ -12,6 +12,19 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+#### copy mode : vim ####
+
+# set vi mode for copy mode
+setw -g mode-keys vi
+
+# copy mode using 'Esc'
+unbind [
+bind Escape copy-mode
+
+# paste using 'p'
+unbind p
+bind p paste-buffer
 
 ###################
 
