--- a/make.conf
+++ b/make.conf
@@ -24,7 +24,7 @@ INPUT_DEVICES="libinput synaptics"
 MAKEOPTS="-j3"
 ACCEPT_LICENSE="*"
 
-USE="X vst usbredir script threads widgets declarative acpi compat dri dri3 sna xvmc bbswitch video_cards_nvidia -video_cards_nouveau driver hunspell screencast dbus spell layers vulcan abi_x86_64 abi_x86_32 udev pcre32 xinerama unicode usb alisp python alsa ffmpeg pulseaudio audit bluetooth concheck dhcpcd iwd lto wifi networkmanager elogind wps qt5 p2p fasteap wimax -gnome -kde"
+USE="X vst clang doc usbredir script threads widgets declarative acpi compat dri dri3 sna xvmc bbswitch video_cards_nvidia -video_cards_nouveau driver hunspell screencast dbus spell layers vulcan abi_x86_64 abi_x86_32 udev pcre32 xinerama unicode usb alisp python alsa ffmpeg pulseaudio audit bluetooth concheck dhcpcd iwd lto wifi networkmanager elogind wps qt5 p2p fasteap wimax -gnome -kde"
 
 GRUB_PLATFORMS="efi-64"
 
