--- a/alacritty.yml
+++ b/alacritty.yml
@@ -140,35 +140,97 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 #draw_bold_text_with_bright_colors: false
 
-# Colors (Blood Moon)
+## Colors (Dracula)
+# Dracula theme for Alacritty
+# https://draculatheme.com/alacritty
+#
+# Color palette
+# https://spec.draculatheme.com
+#
+# Template
+# https://github.com/alacritty/alacritty/blob/master/alacritty.yml
+
 colors:
-  # Default colors
   primary:
-    background: '#000000'
-    #background: '#10100E'
-    foreground: '#C6C6C4'
-
-  # Normal colors
+    background: '#000000' #'#282a36'
+    foreground: '#f8f8f2'
+    bright_foreground: '#ffffff'
+  cursor:
+    text: CellBackground
+    cursor: CellForeground
+  vi_mode_cursor:
+    text: CellBackground
+    cursor: CellForeground
+  search:
+    matches:
+      foreground: '#44475a'
+      background: '#50fa7b'
+    focused_match:
+      foreground: '#44475a'
+      background: '#ffb86c'
+    bar:
+      background: '#282a36'
+      foreground: '#f8f8f2'
+  hints:
+    start:
+      foreground: '#282a36'
+      background: '#f1fa8c'
+    end:
+      foreground: '#f1fa8c'
+      background: '#282a36'
+  line_indicator:
+    foreground: None
+    background: None
+  selection:
+    text: CellForeground
+    background: '#44475a'
   normal:
-    black:   '#10100E'
-    red:     '#C40233'
-    green:   '#009F6B'
-    yellow:  '#FFD700'
-    blue:    '#0087BD'
-    magenta: '#9A4EAE'
-    cyan:    '#20B2AA'
-    white:   '#C6C6C4'
-
-  # Bright colors
+    black: '#21222c'
+    red: '#ff5555'
+    green: '#50fa7b'
+    yellow: '#f1fa8c'
+    blue: '#bd93f9'
+    magenta: '#ff79c6'
+    cyan: '#8be9fd'
+    white: '#f8f8f2'
   bright:
-    black:   '#696969'
-    red:     '#FF2400'
-    green:   '#03C03C'
-    yellow:  '#FDFF00'
-    blue:    '#007FFF'
-    magenta: '#FF1493'
-    cyan:    '#00CCCC'
-    white:   '#FFFAFA'
+    black: '#6272a4'
+    red: '#ff6e6e'
+    green: '#69ff94'
+    yellow: '#ffffa5'
+    blue: '#d6acff'
+    magenta: '#ff92df'
+    cyan: '#a4ffff'
+    white: '#ffffff'
+## Colors (Blood Moon)
+#colors:
+#  # Default colors
+#  primary:
+#    background: '#000000'
+#    #background: '#10100E'
+#    foreground: '#C6C6C4'
+#
+#  # Normal colors
+#  normal:
+#    black:   '#10100E'
+#    red:     '#C40233'
+#    green:   '#009F6B'
+#    yellow:  '#FFD700'
+#    blue:    '#0087BD'
+#    magenta: '#9A4EAE'
+#    cyan:    '#20B2AA'
+#    white:   '#C6C6C4'
+#
+#  # Bright colors
+#  bright:
+#    black:   '#696969'
+#    red:     '#FF2400'
+#    green:   '#03C03C'
+#    yellow:  '#FDFF00'
+#    blue:    '#007FFF'
+#    magenta: '#FF1493'
+#    cyan:    '#00CCCC'
+#    white:   '#FFFAFA'
 
 # Bell
 #
