--- a/make.conf
+++ b/make.conf
@@ -14,6 +14,8 @@ PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
 PKGDIR="/var/cache/binpkgs"
 
+PYTHON_TARGETS="python3_10 python3_9"
+
 # This sets the language of build output to English.
 # Please keep this setting intact when reporting bugs.
 LC_MESSAGES=C
@@ -24,7 +26,8 @@ INPUT_DEVICES="libinput synaptics"
 MAKEOPTS="-j3"
 ACCEPT_LICENSE="*"
 
-USE="X vst clang doc usbredir script threads widgets declarative acpi compat dri dri3 sna xvmc bbswitch video_cards_nvidia -video_cards_nouveau driver hunspell screencast dbus spell layers vulcan abi_x86_64 abi_x86_32 udev pcre32 xinerama unicode usb alisp python alsa ffmpeg pulseaudio audit bluetooth concheck dhcpcd iwd lto wifi networkmanager elogind wps qt5 p2p fasteap wimax -gnome -kde"
+USE="X staging python_targets_python3_10 vc webp vst clang usbredir script threads widgets declarative acpi compat dri dri3 sna bbswitch video_cards_nvidia -video_cards_nouveau driver hunspell screencast dbus spell layers vulcan abi_x86_64 abi_x86_32 udev pcre32 xinerama unicode usb alisp python alsa ffmpeg pulseaudio audit bluetooth concheck dhcpcd iwd wifi networkmanager elogind wps qt5 p2p fasteap wimax -gnome -kde"
+#GHOST USE = xvmc 
 
 GRUB_PLATFORMS="efi-64"
 
