--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,25 +40,57 @@ bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M"
 set -sg escape-time 0
 
 #=======COLORSCHEME=======#
-# Basic color support setting
-set-option -g default-terminal "screen-256color"
-# Default bar color
-set-option -g status-style bg='#1b1c36',fg='#ecf0c1'
+#### COLOUR (Solarized dark)
 
-# Active Pane
-set -g pane-active-border-style "fg=#5ccc96"
+# default statusbar colors
+set-option -g status-style fg=yellow,bg=black #yellow and base02
 
-# Inactive Pane
-set -g pane-border-style "fg=#686f9a"
+# default window title colors
+set-window-option -g window-status-style fg=brightblue,bg=default #base0 and default
+#set-window-option -g window-status-style dim
 
-# Active window
-set-option -g window-status-current-style bg='#686f9a',fg='#ffffff'
+# active window title colors
+set-window-option -g window-status-current-style fg=brightred,bg=default #orange and default
+#set-window-option -g window-status-current-style bright
 
-# Message
-set-option -g message-style bg='#686f9a',fg='#ecf0c1'
-set-option -g message-command-style bg='#686f9a',fg='#ecf0c1'
+# pane border
+set-option -g pane-border-style fg=black #base02
+set-option -g pane-active-border-style fg=brightgreen #base01
 
-# When Commands are run
-set -g message-style "fg=#0f111b,bg=#686f9a"
-###################
+# message text
+set-option -g message-style fg=brightred,bg=black #orange and base01
+
+# pane number display
+set-option -g display-panes-active-colour brightred #orange
+set-option -g display-panes-colour blue #blue
+
+# clock
+set-window-option -g clock-mode-colour green #green
+
+# bell
+set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
+
+
+# Dracula
+## Basic color support setting
+#set-option -g default-terminal "screen-256color"
+## Default bar color
+#set-option -g status-style bg='#1b1c36',fg='#ecf0c1'
+
+## Active Pane
+#set -g pane-active-border-style "fg=#5ccc96"
+
+## Inactive Pane
+#set -g pane-border-style "fg=#686f9a"
+
+## Active window
+#set-option -g window-status-current-style bg='#686f9a',fg='#ffffff'
+
+## Message
+#set-option -g message-style bg='#686f9a',fg='#ecf0c1'
+#set-option -g message-command-style bg='#686f9a',fg='#ecf0c1'
+
+## When Commands are run
+#set -g message-style "fg=#0f111b,bg=#686f9a"
+####################
 
