--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,11 +35,13 @@ bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "
 bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 
 ###################
+set-option -g focus-events on
 
 # make delay shorter
 set -sg escape-time 0
 
 #=======COLORSCHEME=======#
+set-option -g default-terminal "tmux-256color"
 ### POWERLINE (PURPLE)
 # Themepack format options
 set -goq @themepack-status-left-area-left-format "#S"
