--- a/.conkyrc
+++ b/.conkyrc
@@ -13,11 +13,10 @@ conky.config = {
 }
 
 conky.text = [[
-[${if_empty $battery}no batt${else}$battery${endif}]\
-[M:$mem]\
-[C:$cpu%]\
-[${fs_free}]\
-[${exec /home/nim/Prg/git_projects/conf/conkyscripts/check_ethernet.sh}]\
-[⌨ ${exec /home/nim/Prg/git_projects/conf/conkyscripts/check_keymap.sh }]\
-[⏰ ${exec date "+%d-%m-%y %T"}]
-]]
+ ${if_empty $battery}no batt${else}$battery${endif} \
+ M:$mem \
+ C:$cpu% \
+ ${fs_free} \
+ ${exec /home/nim/dev/git_projects/conf/conkyscripts/check_ethernet.sh} \
+ ⌨ ${exec /home/nim/dev/git_projects/conf/conkyscripts/check_keymap.sh } \
+ ⏰ ${exec date "+%d-%m-%y %T"} ]]
