--- a/gentoo/make.conf
+++ b/gentoo/make.conf
@@ -26,7 +26,7 @@ INPUT_DEVICES="libinput synaptics"
 MAKEOPTS="-j3"
 ACCEPT_LICENSE="*"
 
-USE="X jit staging python_targets_python3_10 vc webp vst clang usbredir threads script widgets declarative acpi compat dri dri3 sna bbswitch video_cards_nvidia -video_cards_nouveau driver hunspell screencast dbus spell layers vulcan abi_x86_64 abi_x86_32 udev pcre32 xinerama unicode usb alisp python alsa ffmpeg pulseaudio audit bluetooth concheck dhcpcd iwd wifi networkmanager elogind wps qt5 p2p fasteap wimax -gnome -kde"
+USE="X profile mpd jit staging python_targets_python3_10 vc vst clang usbredir threads script widgets declarative acpi compat dri dri3 sna bbswitch video_cards_nvidia -video_cards_nouveau driver hunspell screencast dbus spell layers vulcan abi_x86_64 abi_x86_32 udev pcre32 xinerama unicode usb alisp python alsa ffmpeg pulseaudio audit bluetooth concheck dhcpcd iwd wifi networkmanager elogind wps qt5 p2p fasteap wimax -gnome -kde"
 #GHOST USE = xvmc 
 
 GRUB_PLATFORMS="efi-64"
