--- a/terms/kitty.conf
+++ b/terms/kitty.conf
@@ -12,10 +12,12 @@ force_ltr no
 adjust_line_height  0
 adjust_column_width 0
 adjust_baseline 0
+modify_font
 #------------------------------------------------------------------------------------------#
 # Cursor
 #------------------------------------------------------------------------------------------#
-cursor #302970
+#cursor #302970
+cursor #baba3b
 cursor_text_color #111111
 cursor_shape block
 cursor_beam_thickness 1.5
