--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,8 +82,8 @@ set -gqF @themepack-window-status-current-format "#{@themepack-window-status-cur
 set -gqF @themepack-window-status-format "#{@themepack-window-status-prefix}#{@themepack-window-status-format}#{@themepack-window-status-suffix}"
 
 # Powerline color options
-set -goq @powerline-color-main-1 colour90
-set -goq @powerline-color-main-2 colour129
+set -goq @powerline-color-main-1 colour133
+set -goq @powerline-color-main-2 colour133 #129
 set -goq @powerline-color-main-3 colour141
 set -goq @powerline-color-black-1 black
 set -goq @powerline-color-grey-1 colour233
