--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,10 +8,14 @@ bind M-q send-prefix
 bind M-r source-file ~/.tmux.conf \; display ".tmux.conf reloaded!"
 
 # pane movement shortcuts (same as vim)
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind C-h select-pane -L
+bind C-j select-pane -D
+bind C-k select-pane -U
+bind C-l select-pane -R
+
+# move windows list
+bind l select-window -t:+1
+bind h select-window -t:-1
 
 #### copy mode : vim ####
 
@@ -20,7 +24,8 @@ setw -g mode-keys vi
 
 # copy mode using 'Esc'
 unbind [
-bind Escape copy-mode
+bind Space copy-mode
+bind -T copy-mode-vi Escape send-keys -X cancel
 
 # paste using 'p'
 unbind p
@@ -39,6 +44,11 @@ set-option -g focus-events on
 
 # make delay shorter
 set -sg escape-time 0
+
+# Undercurl
+set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
 #=======COLORSCHEME=======#
 set-option -g default-terminal "tmux-256color"
