--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -3,11 +3,11 @@ shell_integration enable no-cursor
 #------------------------------------------------------------------------------------------#
 # Font
 #------------------------------------------------------------------------------------------#
-font_family      FiraCode nerd font
-bold_font        FiraCode nerd font bold
-italic_font      FiraCode nerd font italic
+font_family      CaskaydiaCove Nerd Font
+bold_font        CaskaydiaCove Nerd Font bold
+italic_font      CaskaydiaCove Nerd Font italic
 bold_italic_font auto
-font_size 12
+font_size 13
 force_ltr no
 adjust_line_height  0
 adjust_column_width 0
@@ -17,7 +17,7 @@ modify_font
 # Cursor
 #------------------------------------------------------------------------------------------#
 #cursor #302970
-cursor #baba3b
+cursor #daa520
 cursor_text_color #111111
 cursor_shape block
 cursor_beam_thickness 1.5
@@ -28,7 +28,7 @@ cursor_stop_blinking_after 25.0
 #------------------------------------------------------------------------------------------#
 background_opacity 0.9
 foreground #dddddd
-background #000000
+background #0c0e14
 #------------------------------------------------------------------------------------------#
 # Scrollback
 #------------------------------------------------------------------------------------------#
@@ -43,7 +43,7 @@ touch_scroll_multiplier 1.0
 # Mouse
 #------------------------------------------------------------------------------------------#
 mouse_hide_wait 3.0
-url_color #11bfad
+url_color #3ddbd9
 url_style curly
 open_url_with default
 url_prefixes file ftp ftps gemini git gopher http https irc ircs kitty mailto news sftp ssh
