--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -22,10 +22,12 @@
 ;     "#131313", "",
 ; ],
 
+;#0c0e14
+
 [colors]
-background = #161616
-background-alt = #323232
-foreground = #be95ff
+background = #0c0e14
+background-alt = #393939
+foreground = #d34474
 primary = #3ddbd9
 secondary = #42be65
 alert = #ee5396
@@ -54,7 +56,7 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = "Fira Code Nerd Font;1"
+font-0 = "CaskaydiaCove Nerd Font;2"
 
 modules-left = xworkspaces xwindow
 modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
