--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,4 +1,4 @@
 [Settings]
 gtk-theme-name=Sweet-Dark
-gtk-font-name=FiraCode Nerd Font Mono 11
+gtk-font-name=CaskaydiaCove Nerd Font 11
 gtk-application-prefer-dark-theme = true
