--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -3,9 +3,12 @@ shell_integration enable no-cursor
 #------------------------------------------------------------------------------------------#
 # Font
 #------------------------------------------------------------------------------------------#
-font_family      CaskaydiaCove Nerd Font
-bold_font        CaskaydiaCove Nerd Font bold
-italic_font      CaskaydiaCove Nerd Font italic
+#font_family      CaskaydiaCove Nerd Font
+#bold_font        CaskaydiaCove Nerd Font bold
+#italic_font      CaskaydiaCove Nerd Font italic
+font_family      BlexMono Nerd Font
+bold_font        BlexMono Nerd Font bold
+italic_font      BlexMono Nerd Font italic
 bold_italic_font auto
 font_size 13
 force_ltr no
