--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -6,9 +6,9 @@ shell_integration enable no-cursor
 #font_family      CaskaydiaCove Nerd Font
 #bold_font        CaskaydiaCove Nerd Font bold
 #italic_font      CaskaydiaCove Nerd Font italic
-font_family      BlexMono Nerd Font
-bold_font        BlexMono Nerd Font bold
-italic_font      BlexMono Nerd Font italic
+font_family      BlexMono NF
+bold_font        BlexMono NF bold
+italic_font      BlexMono NF italic
 bold_italic_font auto
 font_size 13
 force_ltr no
@@ -20,7 +20,8 @@ modify_font
 # Cursor
 #------------------------------------------------------------------------------------------#
 #cursor #302970
-cursor #daa520
+cursor #34b055
+#daa520
 cursor_text_color #111111
 cursor_shape block
 cursor_beam_thickness 1.5
@@ -31,7 +32,9 @@ cursor_stop_blinking_after 25.0
 #------------------------------------------------------------------------------------------#
 background_opacity 0.9
 foreground #dddddd
-background #0c0e14
+background #0d0e10
+#08212b
+###0c0e14
 #------------------------------------------------------------------------------------------#
 # Scrollback
 #------------------------------------------------------------------------------------------#
