--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,4 +1,3 @@
-[Settings]
-gtk-theme-name=Sweet-Dark
+Settings]
+gtk-theme-name=Ant
 gtk-font-name=CaskaydiaCove Nerd Font 11
-gtk-application-prefer-dark-theme = true
