--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -20,7 +20,8 @@ modify_font
 # Cursor
 #------------------------------------------------------------------------------------------#
 #cursor #302970
-cursor #34b055
+cursor #fedd38
+#34b055
 #daa520
 cursor_text_color #111111
 cursor_shape block
@@ -32,7 +33,8 @@ cursor_stop_blinking_after 25.0
 #------------------------------------------------------------------------------------------#
 background_opacity 0.9
 foreground #dddddd
-background #0d0e10
+background #fdf6e3
+#0d0e10
 #08212b
 ###0c0e14
 #------------------------------------------------------------------------------------------#
