--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,15 @@
-#=======BIND=======#
-# unbind default prefix and set it to ctrl-a
+# |================================================================|
+# | Filename: .tmux.conf
+# | Author: ezeire
+# | Description:
+# | [[
+# |	Config file for tmux
+# | ]]
+# |================================================================|
+
+# | BINDS |========================================================|
+# |================================================================|
+# unbind default prefix and set it to alt-a
 unbind C-b
 set -g prefix M-a
 bind M-q send-prefix
@@ -31,15 +41,20 @@ bind -T copy-mode-vi Escape send-keys -X cancel
 unbind p
 bind p paste-buffer
 
-###################
+# rename panel
+unbind r
+bind r command-prompt "rename-window '%%'"
 
-#=======MOUSE=======#
+# |================================================================|
+
+# | MOUSE |========================================================|
+# |================================================================|
 
 set-option -g -q mouse on
 bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 
-###################
+# |================================================================|
 set-option -g focus-events on
 
 # make delay shorter
@@ -50,28 +65,28 @@ set -g default-terminal "${TERM}"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
-#=======COLORSCHEME=======#
+# | THEME |========================================================|
+# |================================================================|
 set-option -g default-terminal "tmux-256color"
-### POWERLINE (PURPLE)
 # Themepack format options
 set -goq @themepack-status-left-area-left-format "#S"
-set -goq @themepack-status-left-area-middle-format "#(whoami)"
-set -goq @themepack-status-left-area-right-format "#I:#P"
-set -goq @themepack-status-right-area-left-format "%H:%M:%S"
-set -goq @themepack-status-right-area-middle-format "%d-%b-%y"
-set -goq @themepack-status-right-area-right-format "#H"
-set -goq @themepack-window-status-current-format "#I:#W#F"
-set -goq @themepack-window-status-format "#I:#W#F"
+set -goq @themepack-status-right-area-middle-format "%H:%M:%S"
+set -goq @themepack-status-right-area-right-format "%d-%b-%y"
+#set -goq @themepack-status-left-area-middle-format "#(whoami)"
+#set -goq @themepack-status-left-area-right-format "#I:#P"
+#set -goq @themepack-status-right-area-right-format "#H"
+set -goq @themepack-window-status-current-format "#W#F"
+set -goq @themepack-window-status-format "#W#F"
 
 # Customizable prefixes and suffixes for @themepack-* format options
 set -goq @themepack-status-left-area-left-prefix ""
 set -goq @themepack-status-left-area-left-suffix ""
-set -goq @themepack-status-left-area-middle-prefix ""
-set -goq @themepack-status-left-area-middle-suffix ""
-set -goq @themepack-status-left-area-right-prefix ""
-set -goq @themepack-status-left-area-right-suffix ""
-set -goq @themepack-status-right-area-left-prefix ""
-set -goq @themepack-status-right-area-left-suffix ""
+#set -goq @themepack-status-left-area-middle-prefix ""
+#set -goq @themepack-status-left-area-middle-suffix ""
+#set -goq @themepack-status-left-area-right-prefix ""
+#set -goq @themepack-status-left-area-right-suffix ""
+#set -goq @themepack-status-right-area-left-prefix ""
+#set -goq @themepack-status-right-area-left-suffix ""
 set -goq @themepack-status-right-area-middle-prefix ""
 set -goq @themepack-status-right-area-middle-suffix ""
 set -goq @themepack-status-right-area-right-prefix ""
@@ -83,15 +98,15 @@ set -goq @themepack-window-status-suffix ""
 
 # Apply prefixes and suffixes to @themepack-* format options
 set -gqF @themepack-status-left-area-left-format "#{@themepack-status-left-area-left-prefix}#{@themepack-status-left-area-left-format}#{@themepack-status-left-area-left-suffix}"
-set -gqF @themepack-status-left-area-middle-format "#{@themepack-status-left-area-middle-prefix}#{@themepack-status-left-area-middle-format}#{@themepack-status-left-area-middle-suffix}"
-set -gqF @themepack-status-left-area-right-format "#{@themepack-status-left-area-right-prefix}#{@themepack-status-left-area-right-format}#{@themepack-status-left-area-right-suffix}"
-set -gqF @themepack-status-right-area-left-format "#{@themepack-status-right-area-left-prefix}#{@themepack-status-right-area-left-format}#{@themepack-status-right-area-left-suffix}"
+#set -gqF @themepack-status-left-area-middle-format "#{@themepack-status-left-area-middle-prefix}#{@themepack-status-left-area-middle-format}#{@themepack-status-left-area-middle-suffix}"
+#set -gqF @themepack-status-left-area-right-format "#{@themepack-status-left-area-right-prefix}#{@themepack-status-left-area-right-format}#{@themepack-status-left-area-right-suffix}"
+#set -gqF @themepack-status-right-area-left-format "#{@themepack-status-right-area-left-prefix}#{@themepack-status-right-area-left-format}#{@themepack-status-right-area-left-suffix}"
 set -gqF @themepack-status-right-area-middle-format "#{@themepack-status-right-area-middle-prefix}#{@themepack-status-right-area-middle-format}#{@themepack-status-right-area-middle-suffix}"
 set -gqF @themepack-status-right-area-right-format "#{@themepack-status-right-area-right-prefix}#{@themepack-status-right-area-right-format}#{@themepack-status-right-area-right-suffix}"
 set -gqF @themepack-window-status-current-format "#{@themepack-window-status-current-prefix}#{@themepack-window-status-current-format}#{@themepack-window-status-current-suffix}"
 set -gqF @themepack-window-status-format "#{@themepack-window-status-prefix}#{@themepack-window-status-format}#{@themepack-window-status-suffix}"
 
-# Powerline color options
+# Color options
 set -goq @powerline-color-main-1 colour161
 set -goq @powerline-color-main-2 colour161 #129
 set -goq @powerline-color-main-3 colour141
@@ -103,7 +118,7 @@ set -goq @powerline-color-grey-4 colour240
 set -goq @powerline-color-grey-5 colour243
 set -goq @powerline-color-grey-6 colour245
 
-# Powerline Double Override
+# Double Override
 set -goqF @powerline-status-right-area-right-bg "#{@powerline-color-main-1}"
 
 # Powerline options
@@ -203,58 +218,4 @@ set -gwF window-status-current-style "fg=#{@theme-window-status-current-fg},bg=#
 set -gwF window-status-format "#{@theme-window-status-format}"
 set -gwF window-status-separator "#{@theme-window-status-separator}"
 
-
-##### COLOUR (Solarized dark)
-
-## default statusbar colors
-#set-option -g status-style fg=yellow,bg=black #yellow and base02
-
-## default window title colors
-#set-window-option -g window-status-style fg=brightblue,bg=default #base0 and default
-##set-window-option -g window-status-style dim
-
-## active window title colors
-#set-window-option -g window-status-current-style fg=brightred,bg=default #orange and default
-##set-window-option -g window-status-current-style bright
-
-## pane border
-#set-option -g pane-border-style fg=black #base02
-#set-option -g pane-active-border-style fg=brightgreen #base01
-
-## message text
-#set-option -g message-style fg=brightred,bg=black #orange and base01
-
-## pane number display
-#set-option -g display-panes-active-colour brightred #orange
-#set-option -g display-panes-colour blue #blue
-
-## clock
-#set-window-option -g clock-mode-colour green #green
-
-## bell
-#set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
-
-
-# Dracula
-## Basic color support setting
-#set-option -g default-terminal "screen-256color"
-## Default bar color
-#set-option -g status-style bg='#1b1c36',fg='#ecf0c1'
-
-## Active Pane
-#set -g pane-active-border-style "fg=#5ccc96"
-
-## Inactive Pane
-#set -g pane-border-style "fg=#686f9a"
-
-## Active window
-#set-option -g window-status-current-style bg='#686f9a',fg='#ffffff'
-
-## Message
-#set-option -g message-style bg='#686f9a',fg='#ecf0c1'
-#set-option -g message-command-style bg='#686f9a',fg='#ecf0c1'
-
-## When Commands are run
-#set -g message-style "fg=#0f111b,bg=#686f9a"
-####################
-
+# |================================================================|
