--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -1,4 +1,6 @@
 # Configuration for Alacritty, the GPU enhanced terminal emulator.
+import:
+  - ~/.config/alacritty/kanagawa.yml
 
 # Import additional configuration files
 #
@@ -21,7 +23,7 @@ env:
   # each instance of Alacritty. If it is not present, alacritty will
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
-  TERM: xterm-256color #alacritty
+  TERM: xterm-256color # alacritty
 
 window:
   # Window dimensions (changes require restart)
@@ -140,9 +142,9 @@ font:
       style: Bold italic
 
   # Point size
-  size: 12
+  size: 11.0
 
- # Offset is the extra space around each character. `offset.y` can be thought
+  # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
   # spacing.
   #offset:
@@ -165,6 +167,7 @@ font:
 
 # If `true`, bold text is drawn using the bright color variants.
 #draw_bold_text_with_bright_colors: false
+
 
 # Colors (Tomorrow Night)
 #colors:
