--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # |================================================================|
 # | Filename: .tmux.conf
-# | Author: ezeire
+# | Author: dualizm
 # | Description:
 # | [[
 # |	Config file for tmux
