--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,5 +67,5 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{25
 
 # | THEME |========================================================|
 # |================================================================|
-set-option -g default-terminal "tmux-256color"
+set-option -g default-terminal "screen-256color"
 # |================================================================|
